--- a/flutter_ops/pubspec.yaml
+++ b/flutter_ops/pubspec.yaml
@@ -29,6 +29,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
 
+  flex_color_scheme: ^3.0.1
+
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
