--- a/.ops.yaml
+++ b/.ops.yaml
@@ -56,9 +56,8 @@ task:
       - |
         rm -rf "${PWD}/${TMP}/api/ops"
         docker run --rm -v "${PWD}/${TMP}/rpc-ops/api/gen/swagger/api:/api" -v "${PWD}/${TMP}/api/ops:/out" openapitools/openapi-generator-cli:v5.2.1 generate \
-          -i /api/ops.swagger.json -g dart-dio-next -o /out/
-      - docker run --rm -v "${PWD}/${TMP}/api/ops:/out" cirrusci/flutter:2.2.3 sh -c "cd /out && flutter pub get"
-      - docker run --rm -v "${PWD}/${TMP}/api/ops:/out" cirrusci/flutter:2.2.3 sh -c "cd /out && flutter pub run build_runner build --delete-conflicting-outputs"
+          -i /api/ops.swagger.json -g dart-dio-next -o /out/ --additional-properties=pubName=opsapi
+      - docker run --rm -v "${PWD}/${TMP}/api/ops:/out" cirrusci/flutter:2.2.3 sh -c "cd /out && flutter pub get && flutter pub run build_runner build --delete-conflicting-outputs"
       - cp -r ${PWD}/${TMP}/api flutter_ops/
   font:
     step:
